[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["'heokyoungmin' <'stalvede0421@gmail.com'>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
